Generate Documentation e54642e573cd16868a970fa19b8569f7fdf78c1f

--- a/genindex.html
+++ b/genindex.html
@@ -413,6 +413,8 @@
         <li><a href="spike.scenario.html#spike.scenario.scenario.ScenarioThreadData.command">(spike.scenario.scenario.ScenarioThreadData method)</a>, <a href="spike.scenario.scenario.html#spike.scenario.scenario.ScenarioThreadData.command">[1]</a>
 </li>
       </ul></li>
+      <li><a href="spike.scenario.html#spike.scenario.scenario.Scenario.components">components() (spike.scenario.scenario.Scenario method)</a>, <a href="spike.scenario.scenario.html#spike.scenario.scenario.Scenario.components">[1]</a>
+</li>
       <li><a href="spike.scenario.commands.html#spike.scenario.commands.ScenarioCommands.configure">configure() (spike.scenario.commands.ScenarioCommands method)</a>, <a href="spike.scenario.html#spike.scenario.commands.ScenarioCommands.configure">[1]</a>
 
       <ul>
@@ -511,6 +513,8 @@
         <li><a href="spike.scenario.html#spike.scenario.ground.ScenarioGround.get_color">(spike.scenario.ground.ScenarioGround method)</a>
 </li>
       </ul></li>
+      <li><a href="spike.scenario.html#spike.scenario.scenario.ScenarioThreadData.get_components">get_components() (spike.scenario.scenario.ScenarioThreadData method)</a>, <a href="spike.scenario.scenario.html#spike.scenario.scenario.ScenarioThreadData.get_components">[1]</a>
+</li>
       <li><a href="spike.html#spike.motor.Motor.get_default_speed">get_default_speed() (spike.motor.Motor method)</a>, <a href="spike.motor.html#spike.motor.Motor.get_default_speed">[1]</a>
 
       <ul>
